@@ -1,0 +1,20 @@
+<printer id="printer/Kodak-ESP_3250">
+  <make>Kodak</make>
+  <model>ESP 3250</model>
+  <mechanism>
+    <inkjet />
+    <color />
+  </mechanism>
+  <functionality>D</functionality>
+  <driver>c2esp</driver>
+  <drivers>
+    <driver>
+      <id>c2esp</id>
+      <comments>
+        <en>
+	  &lt;a href=&quot;http://cupsdriverkodak.sourceforge.net/&quot;&gt;CUPS driver for Kodak inkjets&lt;/a&gt;
+	</en>
+      </comments>
+    </driver>
+  </drivers>
+</printer>
