@@ -1,3 +1,8 @@
+2010-07-10  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/printer/Kodak-ESP_3250.xml:
+	  New entries added to the MySQL database.
+
 2010-07-09  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/HP-OfficeJet_4300.xml: printer/Samsung-CLP-300.xml,
